frontend/test/should_pass/map_model_002.gm
node class A
{
	intValue: int;
	stringValue: string;
	intToString: map<int, string>;
	stringToInt: map<string, int>;
}