frontend/test/should_fail/map_model_001.gm
node class A
{
	intValue: int;
	stringValue: string;
	intToString: map<int, string>;
	stringToInt: map<string, int>;
	const conststringToInt: map<string,int>;
}